--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PhiDeltLearning - Login</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="media/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="media/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="media/favicon-16x16.png"
+    />
+    <link rel="manifest" href="media/site.webmanifest" />
+    <link rel="mask-icon" href="media/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="shortcut icon" href="media/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="media/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
     <div class="login">
-      <img class="logo" src="images/logo.png" alt="flag" />
+      <img class="logo" src="media/logo.png" alt="flag" />
       <div class="loader"></div>
       <form>
+        <p id="error">Error logging in try again.</p>
         <label for="email">Email:</label>
         <input id="email" type="email" placeholder="Email..." />
         <label for="password">Phi Delt Password:</label>
