Added scheduling page for Chegg and prompted the GPT API to be more concise.

--- a/client/chat.html
+++ b/client/chat.html
@@ -60,15 +60,22 @@
   </head>
   <body>
     <nav>
-      <img src="media/phi-delt.png" />
-      <p>PhiDeltLearning</p>
+      <div></div>
+      <div class="phidelt">
+        <img src="media/phidelt.png" alt="PhiDelt Logo" />
+        <p>PhiDeltLearning</p>
+      </div>
+      <div class="buttons">
+        <a class="gpt" href="/chat">GPT-4</a>
+        <a class="chegg" href="/chegg">Chegg</a>
+      </div>
     </nav>
     <div id="load">
       <div class="loader"></div>
     </div>
     <div class="container">
       <div class="sidenav">
-        <a href="/client/chat.html" id="newChat">
+        <a href="/chat" id="newChat">
           <i class="fa-solid fa-comments"></i> &nbsp;New Chat
         </a>
         <h3>Previous Chats:</h3>
